# GeneratorAndSimpleEngine

./: .gitignore  README.md
code/: xml_generator.cpp
code/engine/: CMakeLists.txt  main.cpp
code/generator/src/: main.cpp
engine/: CMakeLists.txt  main.cpp
engine/includes/: Lights.h  Models.h  TimeBasedTransformations.h
engine/src/: Lights.cpp  Models.cpp  TimeBasedTransformations.cpp
generator/: CMakeLists.txt
generator/src/: main  main.cpp  pointsANDvectors.cpp  pointsANDvectors.h
tests/: test_1_4.xml
